# owox-model-canvas

./: .gitignore  .prettierignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  NOTICE  README.md  build.ps1  build.sh  eslint.config.mjs  package.json  pnpm-lock.yaml  render.yaml
.claude/workflows/: implement-plan.js
.github/workflows/: ci.yml
crates/uaml/: Cargo.toml
crates/uaml-wasm/: Cargo.toml
crates/waml-editor/: Cargo.toml  build.rs
crates/waml-editor/src/: action_link.rs  app.rs  app_menu.rs  attr_row.rs  camera.rs  canvas.rs  caption_button.rs  class_diagram_view.rs  classifier_preview_view.rs  cli.rs  colors_overlay.rs  config.rs  conflict_badge.rs  diagram_switcher.rs  doc_tabs.rs  doc_view.rs  dock.rs  fonts_overlay.rs  fps_meter.rs  frame.rs  icon.rs  icons.rs  icons_overlay.rs  inspector.rs  inspector_panel.rs  load.rs  logo.rs  main.rs  nav.rs  node_design_editor.rs  overlay_shell.rs  panel_glass.rs  radial.rs  recent_row.rs  ref_card.rs  relationship_card.rs  scene.rs  select_box.rs  selection_toolbar.rs  shortcuts_overlay.rs  (+10 more)
crates/waml-editor/src/card/: mod.rs
crates/waml-editor/src/popup/: base.rs  conflict_list.rs  marking.rs  menu.rs  mod.rs  node_menu.rs  radial.rs  root.rs  select.rs
crates/waml-editor/tests/: README.md
crates/waml-editor/tests/fixtures/groups/: account.md  groups-diagram.md  invoice.md  order.md
crates/waml-editor/tests/fixtures/mini/: order.md
docs/: uaml-spec.md
docs/design/: hud-button-mock.html  (+2 more)
lsp-demo/: order.md
scripts/: capture-window.ps1  gen-icon.py  run-native.ps1  run-native.sh
(+160 files in other folders)
