[package]
name = "waml-editor"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Native, read-only GPU viewer for WAML/OKF diagrams."

[dependencies]
waml = { path = "../waml", features = ["serde"] }
# Pinned to a fork of makepad/makepad@dev (redoz/makepad, tag waml-pin-makepad) so the exact
# rev survives even if upstream force-pushes or yanks its dev branch. rev is the reproducible pin.
makepad-widgets = { git = "https://github.com/redoz/makepad.git", rev = "1d91ef8bb5a578fb238dce466e81b83f8c3ebfcb" }
taffy = "0.12.2"
serde = { workspace = true }
serde_json = { workspace = true }
# `home_dir()` for the `~/.waml` config root (see src/config.rs).
dirs = "5"
